# Raytracer

./: .gitmodules  CMakeLists.txt  vcpkg.json
include/: angle.h  camera.h  color.h  hit.h  image.h  material.h  primitive.h  random_generator.h  ray.h  renderer.h  scene.h  sphere.h  timer.h  vec3.h  vector.h  world.h
main/: 01_simple_output.cpp  02_simple_gradient.cpp  03_simple_sphere.cpp  04_sphere_normals.cpp  05_simple_world.cpp  06_anti_aliasing.cpp  07_simple_diffuse.cpp  08_simple_metal.cpp  09_simple_dielectrics.cpp  10_simple_camera.cpp  11_simple_scene.cpp
src/: camera.cpp  main.cpp  material.cpp  random.cpp  renderer.cpp  scene.cpp  sphere.cpp  timer.cpp  vector.cpp  world.cpp
